# OrganizationApp

./: .dockerignore  .env_exemple  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py  test_data.py
app/connectors/: sql.py
app/depends/: services.py
app/migrations/: env.py
app/migrations/versions/: d71c3c368563_initial.py
app/models/: __init__.py  abc.py  activity.py  address.py  company.py  many_to_many.py  phone_numbers.py
app/routers/: __init__.py
app/routers/v1/: __init__.py  companies.py
app/schemas/: companies.py
app/services/: authorization.py  errors.py  search_service.py
app/utils/: enum.py  lifespan.py
tests/: conftest.py
tests/integration/: conftest.py  test_company.py
