[tool.poetry]
name = "organizationapp"
version = "0.1.0"
description = "Асинхронный REST API сервис-справочник организаций"
authors = ["Nif-Naf <Nif-Naf94@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
isort = "^6.0.1"
black = "^25.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = "-p no:warnings -q --tb=short"
testpaths = ["./tests"]
log_cli = true
log_cli_level = "DEBUG"
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
